syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/devsirose/simplebank/pb";

message Account {
    string owner = 1;
    int64 balance = 2;
    string currency = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateAccountRequest {
    string owner = 1;
    int64 balance = 2;
    string currency = 3;
}

message CreateAccountResponse {
    Account account = 1;
}

message GetAccountByIdRequest {
    int64 id = 1;
}

message GetAccountByIdResponse {
    Account account = 1;
}

