syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/devsirose/simplebank/pb";

service AccountService {
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
}